compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__assigning.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 52
expression: "\npub fn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y) {
  let assert True = x
  let assert False = x
  let assert Nil = y
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x, y) {
  if (!(x)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 21, end: 40, pattern_start: 32, pattern_end: 36 }
    )
  }
  throw makeError(
    "let_assert",
    FILEPATH,
    "my/mod",
    4,
    "go",
    "Pattern match failed, no pattern matched the value.",
    { value: x, start: 43, end: 63, pattern_start: 54, pattern_end: 59 }
  )
  
  return y;
}
