compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__binop_panic_left.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 171
expression: "pub fn negate(x) {\n    panic && x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    panic && x
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  return (() => {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })() && x;
}
