compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__binop_panic_right.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 162
expression: "pub fn negate(x) {\n    x && panic\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    x && panic
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  return x && (() => {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })();
}
