compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__binop_todo_left.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 189
expression: "pub fn negate(x) {\n    todo && x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    todo && x
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  return (() => {
    throw makeError(
      "todo",
      FILEPATH,
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  })() && x;
}
