compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 114
expression: "\npub fn go(a) {\n  case a {\n    True -> 1\n    False -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  case a {
    True -> 1
    False -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(a) {
  if (a) {
    return 1;
  } else {
    return 0;
  }
}
