compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__constants_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 29
expression: "\npub const a = True\npub const b = False\npub const c = Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const a = True
pub const b = False
pub const c = Nil


----- TYPESCRIPT DEFINITIONS
export const a: boolean;

export const b: boolean;

export const c: undefined;
