compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__expressions.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 5
expression: "\npub fn go() {\n    True\n    False\n    Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
    True
    False
    Nil
}


----- COMPILED JAVASCRIPT
export function go() {
  true;
  false;
  return undefined;
}
