compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__negate_panic.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 198
expression: "pub fn negate(x) {\n  !panic\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
  !panic
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  let _block;
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    2,
    "negate",
    "`panic` expression evaluated.",
    {}
  )
  return !_block;
}
